media/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  selector:
    app: deluge
  ports:
  - port: 80
    targetPort: http
    name: http
